--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="left">
-        <button data-btn-run>Get Cracking</button>
+        <button data-btn-run>GO</button>
     </div>
     <div class="right">
         <div id="output"></div>
@@ -14,9 +14,12 @@
 
     <script src="js/util.js"></script>
     <script>
+        //"use strict";
         var main = "hey";
 
         function duplicateIdentifier(foo, foo) {
+            console.log(this);
+
             return foo;
         }
 
